--- a/Jogo_Fundamento_Programa/Jogo_Fundamento_Programa.vcxproj.filters
+++ b/Jogo_Fundamento_Programa/Jogo_Fundamento_Programa.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="Obstaculo_A.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Obstaculo_B.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Jogo.h">
@@ -126,6 +129,9 @@
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
     <ClInclude Include="Obstaculo_A.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
+    <ClInclude Include="Obstaculo_B.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
   </ItemGroup>
